# wxKnitplot

./: CMakeLists.txt  README.md
src/: Makefile  generate_makefile.py
src/cli/: proto2json.cc
src/gui/: chart_panel.cc  chart_panel.h  knitplot.cc  knitplot.h  menu_builder.h  preview_panel.h  wx_renderer.cc
src/model/: chart.h  chart_parser.h  circle.h  color.h  graphic.h  library.h  line.h  point.h  polygon.h  rectangle.h  renderer.h  shape.h  shape_base.h  spline.h  style.h  svg.cc  text.h
src/storage/: chart.pb.cc  chart.pb.h  chart.proto
